--- a/Index.html
+++ b/Index.html
@@ -170,28 +170,7 @@ async function handleSignup(){
 }
 
 // --- Login ---
-async function handleLogin(){
-  const e = document.getElementById('liEmail').value.trim();
-  const pw = document.getElementById('liPass').value;
-  const err = document.getElementById('liError'); err.textContent="";
-  try {
-    const res = await auth.signInWithEmailAndPassword(e, pw);
-    if (!res.user.emailVerified){
-      err.textContent = "⚠️ ইমেইল ভেরিফাই করুন";
-      return;
-    }
-    showPage('mainPage');
-    startListeners();
-  } catch(err){
-    if (err.code === 'auth/user-not-found' || err.code === 'auth/wrong-password') {
-      err.textContent = "⚠️ আপনার ইমেইল বা পাসওয়ার্ড ভুল";
-    } else if (err.code === 'auth/too-many-requests') {
-      err.textContent = "⚠️ অনেকবার চেষ্টা করা হয়েছে। একটু পর আবার চেষ্টা করুন।";
-    } else {
-      err.textContent = err.message;
-    }
-  }
-}
+
 
 // --- Counts ---
 function startListeners(){
@@ -208,7 +187,41 @@ function selectPackage(profile,duration,price){
 }
 
 // --- Update Payment Number ---
-function updatePayNumber(){
+function updatePayNumber()async function handleLogin() {
+  const e = document.getElementById('liEmail').value.trim();
+  const pw = document.getElementById('liPass').value;
+  const err = document.getElementById('liError');
+  err.textContent = "";
+
+  if (!e || !pw) {
+    err.textContent = "⚠️ ইমেইল ও পাসওয়ার্ড দিন";
+    return;
+  }
+
+  try {
+    const res = await auth.signInWithEmailAndPassword(e, pw);
+
+    // Check if email is verified
+    if (!res.user.emailVerified) {
+      err.textContent = "⚠️ ইমেইল ভেরিফিকেশন বাকি আছে। অনুগ্রহ করে আপনার ইমেইল চেক করুন।";
+      return;
+    }
+
+    // Login success
+    showPage('mainPage');
+    startListeners();
+  } catch (error) {
+    if (error.code === 'auth/user-not-found') {
+      err.textContent = "⚠️ ইউজার খুঁজে পাওয়া যায়নি।";
+    } else if (error.code === 'auth/wrong-password') {
+      err.textContent = "⚠️ পাসওয়ার্ড ভুল।";
+    } else if (error.code === 'auth/too-many-requests') {
+      err.textContent = "⚠️ অনেকবার চেষ্টা করা হয়েছে। কিছুক্ষণ পরে আবার চেষ্টা করুন।";
+    } else {
+      err.textContent = "⚠️ লগইন ব্যর্থ: " + error.message;
+    }
+  }
+}{
   const m = document.getElementById('paymentMethod').value;
   let num="";
   if (m==="Bkash") num="01740433733";
