--- a/Index.html
+++ b/Index.html
@@ -170,7 +170,27 @@ async function handleSignup(){
 }
 
 // --- Login ---
-
+async function handleLogin(){
+  const e = document.getElementById('liEmail').value.trim();
+  const pw = document.getElementById('liPass').value;
+  const err = document.getElementById('liError'); err.textContent="";
+  try{
+    const res = await auth.signInWithEmailAndPassword(e, pw);
+    if (!res.user.emailVerified){
+      err.textContent = "⚠️ ইমেইল ভেরিফাই করুন";
+      return;
+    }
+    alert("✅ লগইন সফল হয়েছে");
+    showPage('mainPage');
+    startListeners();
+  } catch(error){
+    if (error.code === 'auth/user-not-found' || error.code === 'auth/wrong-password') {
+      err.textContent = "❌ ইমেইল বা পাসওয়ার্ড ভুল";
+    } else {
+      err.textContent = error.message;
+    }
+  }
+}
 
 // --- Counts ---
 function startListeners(){
@@ -187,41 +207,7 @@ function selectPackage(profile,duration,price){
 }
 
 // --- Update Payment Number ---
-function updatePayNumber()async function handleLogin() {
-  const e = document.getElementById('liEmail').value.trim();
-  const pw = document.getElementById('liPass').value;
-  const err = document.getElementById('liError');
-  err.textContent = "";
-
-  if (!e || !pw) {
-    err.textContent = "⚠️ ইমেইল ও পাসওয়ার্ড দিন";
-    return;
-  }
-
-  try {
-    const res = await auth.signInWithEmailAndPassword(e, pw);
-
-    // Check if email is verified
-    if (!res.user.emailVerified) {
-      err.textContent = "⚠️ ইমেইল ভেরিফিকেশন বাকি আছে। অনুগ্রহ করে আপনার ইমেইল চেক করুন।";
-      return;
-    }
-
-    // Login success
-    showPage('mainPage');
-    startListeners();
-  } catch (error) {
-    if (error.code === 'auth/user-not-found') {
-      err.textContent = "⚠️ ইউজার খুঁজে পাওয়া যায়নি।";
-    } else if (error.code === 'auth/wrong-password') {
-      err.textContent = "⚠️ পাসওয়ার্ড ভুল।";
-    } else if (error.code === 'auth/too-many-requests') {
-      err.textContent = "⚠️ অনেকবার চেষ্টা করা হয়েছে। কিছুক্ষণ পরে আবার চেষ্টা করুন।";
-    } else {
-      err.textContent = "⚠️ লগইন ব্যর্থ: " + error.message;
-    }
-  }
-}{
+function updatePayNumber(){
   const m = document.getElementById('paymentMethod').value;
   let num="";
   if (m==="Bkash") num="01740433733";
