--- a/Index.html
+++ b/Index.html
@@ -1,126 +1,141 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crunchyroll Premium BD</title>
-  <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif;
-    }
-    body {
-      background: #fefefe;
-      color: #222;
-    }
-    header {
-      background: #ff9900;
-      padding: 15px 20px;
-      text-align: center;
-      font-size: 22px;
-      font-weight: bold;
-      color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 999;
-    }
-    .hero {
-      background-image: url('https://cdn.wallpapersafari.com/44/94/ghgbpn.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 250px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 2px 2px 4px #000;
-      font-size: 24px;
-      padding: 20px;
-    }
-    .btn-primary {
-      background: #ff9900;
-      color: white;
-      padding: 12px 25px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      margin: 20px auto;
-      display: block;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .btn-primary:hover {
-      background: #e88a00;
-    }
-    .packages {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 15px;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.08);
-      text-align: center;
-    }
-    .card h3 {
-      color: #ff9900;
-      font-size: 20px;
-      margin-bottom: 10px;
-    }
-    .card p {
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
-    .card button {
-      background: #ff9900;
-      color: white;
-      border: none;
-      padding: 8px 15px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
+  <meta charset="UTF-8">
+  <title>Crunchyroll Premium BD Shop</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">  <!-- Design Style -->  <style>
+    body {margin:0;font-family:'Segoe UI',sans-serif;background:#131c2b;color:white;}
+    .page {display:none;padding:20px;max-width:600px;margin:auto;}
+    .active {display:block;}
+    img.banner {width:100%;border-radius:8px;}
+    img.avatar {width:100px;height:100px;border-radius:50%;border:3px solid white;display:block;margin:20px auto;}
+    input, select, button {width:100%;padding:10px;margin:8px 0;border-radius:6px;border:none;font-size:16px;}
+    button {cursor:pointer;}
+    .mega-btn {background:green;color:white;}
+    .package-btn {background:#0f7dc8;color:white;margin-top:6px;border-radius:8px;}
+    .package-btn:hover {background:#095e9f;}
+    .action-btns {display:flex;justify-content:space-between;margin-top:16px;}
+    .orange {background:orange;color:black;}
+    .green {background:green;color:white;}
+    .error {color:#ff4d4d;}
+    .copy-box {background:#2d3a4a;padding:10px;border-radius:8px;margin-top:10px;}
+  </style>  <!-- Firebase -->  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>  <!-- EmailJS -->  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script></head>
+<body><!-- Sign Up --><div id="signupPage" class="page active">
+  <h2>🔐 সাইন আপ</h2>
+  <input id="suEmail" type="email" placeholder="📧 ইমেইল">
+  <input id="suPhone" type="text" placeholder="📱 মোবাইল নম্বর">
+  <input id="suPass" type="password" placeholder="🔑 পাসওয়ার্ড (６ সংখ্যার)">
+  <input id="suConfirm" type="password" placeholder="🔑 কনফার্ম পাসওয়ার্ড">
+  <input id="suCity" type="text" placeholder="🌇শহর">
+  <button onclick="handleSignup()">✅ সাইন আপ</button>
+  <p>ইতিমধ্যে একাউন্ট আছে? <a href="#" onclick="showPage('loginPage')">সাইন ইন করুন</a></p>
+  <p id="suError" class="error"></p>
+</div><!-- Sign In --><div id="loginPage" class="page">
+  <h2>🔓 সাইন ইন</h2>
+  <input id="liEmail" type="email" placeholder="📧 ইমেইল">
+  <input id="liPass" type="password" placeholder="🔑 পাসওয়ার্ড">
+  <button onclick="handleLogin()">➡️ সাইন ইন করুন</button>
+  <p>নতুন? <a href="#" onclick="showPage('signupPage')">সাইন আপ করুন</a></p>
+  <p id="liError" class="error"></p>
+</div><!-- Main Page --><div id="mainPage" class="page">
+  <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner">
+  <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="avatar">
+  <h2 style="text-align:center;">Welcome to Crunchyroll Premium BD Shop</h2>
+  <button class="mega-btn" onclick="showPage('packagePage')">💥 MEGA PACKAGES</button>
+  <p style="margin-top:20px;"><strong>Total Users:</strong> <span id="userCount">0</span> |
+     <strong>Total Orders:</strong> <span id="orderCount">0</span></p>
+</div><!-- Package Page --><div id="packagePage" class="page">
+  <h2>📦 প্যাকেজ সিলেকশন</h2>
+  <!-- Shared -->
+  <h3>📤 Shared Profile</h3>
+  <button class="package-btn" onclick="selectPackage('Shared Profile','1 Month',100)">1 Month – 100 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile','2 Months',200)">2 Months – 200 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile','3 Months',300)">3 Months – 300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile','6 Months',600)">6 Months – 600 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile','8 Months',840)">8 Months – 840 TK</button>
+  <!-- Personal -->
+  <h3>👤 Personal Profile</h3>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','1 Month',240)">1 Month – 240 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','2 Months',480)">2 Months – 480 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','3 Months',720)">3 Months – 720 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','6 Months',1440)">6 Months – 1440 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','8 Months',1800)">8 Months – 1800 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile','12 Months',2760)">12 Months – 2760 TK</button>
+  <!-- Primary -->
+  <h3>👑 Primary Account</h3>
+  <button class="package-btn" onclick="selectPackage('Primary Account','1 Month',650)">1 Month – 650 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account','2 Months',1300)">2 Months – 1300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account','3 Months',1950)">3 Months – 1950 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account','6 Months',3600)">6 Months – 3600 TK</button>  <div class="action-btns">
+    <button class="orange" onclick="showPage('checkoutPage')">🛒 Add To Cart</button>
+    <button class="green" onclick="showPage('mainPage')">⬅️ Back To Home</button>
+  </div>
+  <p id="pkgError" class="error"></p>
+</div><!-- Checkout Page --><div id="checkoutPage" class="page">
+  <h2>✅ Checkout</h2>
+  <div id="selectedInfo"></div>
+  <div style="margin-top:20px;">
+    <input id="coName" type="text" placeholder="Full Name">
+    <input id="coEmail" type="email" placeholder="Email">
+    <input id="coAddress" type="text" placeholder="Street Address">
+    <input id="coMobile" type="text" placeholder="Mobile Number">
+    <input id="coPaymentNumber" type="text" placeholder="Payment Number">
+    <input id="coTransID" type="text" placeholder="Transaction ID">
+    <select id="paymentMethod" onchange="updatePayNumber()">
+      <option value="">-- পেমেন্ট মেথড সিলেক্ট করুন --</option>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+      <option value="Rocket">Rocket</option>
+    </select>
+    <div id="payNumber" class="copy-box"></div>
+    <p>অবশ্যৈ সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে রিফান্ড হবে না।</p>
+    <button class="green" onclick="confirmOrder()">✅ Order Confirm</button>
+    <button class="orange" onclick="showPage('packagePage')">⬅️ Back To Packages</button>
+  </div>
+  <p id="coError" class="error"></p>
+</div><script>
+// Firebase Config
+const firebaseConfig = {
+  apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
+  authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
+  projectId: "crunchyrollpremiumbd-shop"
+};
+const emailjsConfig = {
+  service: "service_z1714kq",
+  adminTpl: "template_hp66tqp",
+  custTpl: "template_1z1lhlf",
+  publicKey: "SsUmUorUm-BZG8LBY"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+emailjs.init(emailjsConfig.publicKey);
 
-  <header>Crunchyroll Premium BD</header>
+function showPage(id){
+  document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+}
+function validPhone(p){ return /^\d{11}$/.test(p) }
+function validPass(p){ return /^\d{6}$/.test(p) }
 
-  <section class="hero">
-    <div>সেরা দামে এনিমে দেখুন এখনই!</div>
-  </section>
+async function handleSignup(){
+  const e = suEmail.value.trim(), p = suPhone.value.trim(), pw = suPass.value, cp = suConfirm.value, c = suCity.value.trim();
+  const err = suError; err.textContent="";
+  if (!validPhone(p)){err.textContent="⚠️ মোবাইল ১১ সংখ্যার হতে হবে"; return;}
+  if (!validPass(pw)){err.textContent="⚠️ পাসওয়ার্ড ৬ সংখ্যা হতে হবে"; return;}
+  if (pw!==cp){err.textContent="⚠️ পাসওয়ার্ড মিলছে না";return;}
+  if (!c){err.textContent="⚠️ শহর লিখুন";return;}
+  try {
+    const snap1 = await db.collection('users').where('email','==',e).get();
+    if (!snap1.empty){err.textContent="⚠️ পূর্বে সাইন আপ করা হয়েছে";return;}
+    const snap2 = await db.collection('users').where('phone','==',p).get();
+    if (!snap2.empty){err.textContent="⚠️ মোবাইল পূর্বে ব্যবহৃত হয়েছে";return;}
+    await auth.createUserWithEmailAndPassword(e, pw);
+    await auth.currentUser.sendEmailVerification();
+    await db.collection('users').add({email:e,phone:p,city:c,timestamp:firebase.firestore.FieldValue.serverTimestamp()});
+    alert("✅ সাইন আপ সফল! ইমেইলে ভেরিফিকেশন পাঠানো হয়েছে।");
+    showPage('loginPage');
+  } catch(err){err.textContent = err.message;}
+}
 
-  <button class="btn-primary" onclick="scrollToPackages()">MEGA PACKAGES</button>
-
-  <section id="packages" class="packages">
-    <div class="card">
-      <h3>Shared Plan</h3>
-      <p>1 মাস - 150 টাকা</p>
-      <button onclick="selectPackage('Shared Plan', 150)">Add to Cart</button>
-    </div>
-    <div class="card">
-      <h3>Personal Plan</h3>
-      <p>1 মাস - 300 টাকা</p>
-      <button onclick="selectPackage('Personal Plan', 300)">Add to Cart</button>
-    </div>
-    <div class="card">
-      <h3>Primary Account</h3>
-      <p>3 মাস - 700 টাকা</p>
-      <button onclick="selectPackage('Primary Account', 700)">Add to Cart</button>
-    </div>
-  </section>
-
-  <script>
-    function scrollToPackages() {
-      document.getElementById('packages').scrollIntoView({ behavior: 'smooth' });
-    }
-    function selectPackage(name, price) {
-      alert(`Selected: ${name} (${price} টাকা)`);
-      // এখানে Firebase + Checkout Page Redirect হবে
-    }
-  </script>
-
-</body>
-</html>
+async function handleLogin(){
+ 
